# Offline_LCA

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cartesian_tree.hpp  iterator.hpp  node.hpp  rmq.hpp  sparse_table.hpp  utils.hpp
include/cartesian_tree/: cartesian_tree.hpp  iterator.hpp  node.hpp
src/: main.cpp
tests/: CMakeLists.txt
tests/end2end/: checker.cpp  test_runner.sh
tests/end2end/include/: end2end.hpp
tests/end2end/src/: main.cpp
tests/end2end/static_tests/big/: answer10.txt  answer7.txt
tests/end2end/static_tests/big/answers/: answer1.txt  answer10.txt  answer2.txt  answer3.txt  answer4.txt  answer5.txt  answer6.txt  answer7.txt  answer8.txt  answer9.txt
tests/end2end/static_tests/big/tests/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
tests/end2end/static_tests/large/answers/: answer1.txt  answer10.txt  answer2.txt  answer3.txt  answer4.txt  answer5.txt  answer6.txt  answer7.txt  answer8.txt  answer9.txt
tests/end2end/static_tests/small/answers/: answer1.txt  answer10.txt  answer2.txt  answer3.txt  answer4.txt  answer5.txt  answer6.txt  answer7.txt  answer8.txt  answer9.txt
tests/end2end/static_tests/small/tests/: test1.txt  test10.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
tests/end2end/static_tests/tiny/answers/: answer1.txt
tests/end2end/static_tests/tiny/tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
tests/unit/: rmq_ans.cpp  sparse_table.cpp  tree_iterator.cpp
